<resources>
    <string name="app_name">Four</string>
    <string name="facebook_app_id">854234981377839</string>
    <string name="slogan">Игра-загадка на изучение английских слов</string>
    <string name="best">рекорд</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secret_word_was">Загаданное слово</string>
    <string name="self_record">Личный рекорд!</string>
    <string name="steps">шаг</string>
    <string name="first_page_facebook_tittle">Состязайся с миром</string>
    <string name="ranking">Рейтинг</string>
    <string name="name_leaderboard">Имя</string>
    <string name="steps_leaderboard">Очков</string>
    <string name="my_place">Мое место: </string>
    <string name="my_record">Мой рекорд: </string>
    <string name="history">История</string>
    <string name="tutorial">как?</string>
    <string name="tutorial_page1">Добро пожаловать \n в FOUR! \n\n\n Давай сыграем в игру! \n Я загадал слово \n из 4-х букв. На каждый твой \n ход я показываю, сколько \n букв в твоем слове \n совпадают с моим.</string>
    <string name="tutorial_page2">Например, \n я задумал слово PLAY. \n Если ты ответишь Game,\n то я скажу "1", так как ты \n отгадал букву "А". \n\n\n  Твоя задача - отгадать \n слово за наименьшее \n количество ходов.\n Ну что поехали?</string>
    <string name="next_button">Далее</string>
    <string name="start_button">Поехали!</string>
    <string name="you_lose">Вы проиграли!</string>
    <string name="your_result">Ваш результат!</string>
    <string name="your_record">Личный рекорд!</string>
    <string name="find_word">Угадай слово</string>
    <string name="this_word_i_dont_know">Такого слова я не знаю</string>
    <string name="zero_letter_same">букв совпало</string>
    <string name="one_letter_same">буква совпала</string>
    <string name="more_letter_same">бувквы совпали</string>
    <string name="one_steps">секунда</string>
    <string name="two__three_four_steps">секунды</string>
    <string name="more_steps">секунд</string>
    <string name="back_space_button">&lt;&lt;</string>
    <string name="Countries">Страны</string>
    <string name="Global">Глобальный</string>
    <string name="challangeDictionary">AFRO ALOE AQUA ATOM AURA AUTO BABY BAIT BALL BAND BANG BANK BASS BATH BEAR BEAT BEEF BEEP BEER BELL BETA BIKE BLUE BODY BOLD BOMB BOOK BOOM BOSS BRED BULL BURN BUST BYTE BOND CAFE CAKE CALL CALM CARD CASH CELL CHAT CHEF CHIP CHOP CUTE CITY CLAN CLAP CLIP CLUB CLUE CODE COIN COLA COLD COOK COOL COPY CORE CORN COST CREW CUBE DARK DEAD DEAL DENT DESK DIAL DIET DISC DOCK DOOM DOOR DRAW DREW DROP DRUG DUCK DUDE DUEL DUET DUMB DUNK DOWN DEEP EAST EASY ECHO EDGE EGGS EPIC EVEN EVER EVIL EXAM EXIT EYES FACE FACT FAIL FAIR FAKE FALL FAST FEAR FEED FEEL FELL FILL FILM FIND FINE FIRE FISH FIVE FLAT FLEX FLIP FLOP FLOW FOLK FONT FOOD FOOL FOOT FORK FORM FOUL FOUR FREE FROG FROM FULL FUNK GAIN GAIT GAME GEAR GEEK GIFT GIRL GIVE GLAD GLOW GLUE GOAL GOLD GOLF GOOD GONG GREY HACK HAIR HALF HALL HALO HAND HARD HAWK HEAD HEAP HEAR HEAT HELL HELP HERO HINT HOLD HOLE HOLY HOME HOOK HOOP HOPE HOUR HULK HUNT HURT ICON IDEA IDOL IONS IRON ITEM JAZZ JOKE JUDO JAZZ JOIN JACK KICK KILL KIND KING KISS KITE KIWI KNEE LADY LAIR LAKE LAMP LAND LAST LAZY LEAN LEAP LEFT LIAR LIFE LIFT LIMB LIME LINE LINK LION LIVE LOAD LOCK LOGO LONG LOOP LORD LOSE LOST LOUD LOVE MAIL MAIN MALE MALL MANY MASK MATH MEAL MEAN MEAT MENU MESS MILK MINT MISS MODE MOOD MOON MUCH MUSK MUST MUTE MYTH NAME NEAR NECK NEED NEON NETS NEST NEWS NEXT NICE NODE NONE NOPE NOSE NOSY NOTE NULL NUMB OKAY ONCE ONLY OPEN OVAL OVER PAIN PARK PART PASS PAST PATH PICK PINK PLAN PLAY PLOT PLUS POEM POOL PORT PRAY PULL PUNK QUIT QUIZ RACE RAIN RANK READ REAL REST ROAD ROOM ROOT RUBY SAID SAIL SALE SAVE SCAN SEAL SELF SEND SHIP SHOE SHOP SHOT SHOW SILK SING SIZE SKIN SLAM SLAP SLOW SNOW SOAP SODA SOFA SOFT SOIL SOLO SONG SORT SOUL SOUP SPIN STAR STAY STEP STOP TASK TAXI TEAM TEEN TELL TERM TEST TEXT THIS TIME TIPS TOAD TONE TOOL TOWN TRAP TREE TRIO TRIP TRUE TUBE TWIN UNIT USER VASE VERB VIEW VINE VISA VOLT VOTE WALL WARD WARM WASH WIND WINE WINO WOLF WILD WORD WORK WORM YEAR YOGA ZERO ZONE ZOOM</string>
</resources>