<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgraoundMainMenu"
    tools:context="kz.strixit.abuka.fourapp.LeaderboardFragment">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/ranking"-->
        <!--android:textSize="30dp"-->
        <!--android:gravity="center"-->
        <!--android:textColor="@color/white"-->
        <!--android:layout_margin="10dp"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="#"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="@string/name_leaderboard"
            android:textSize="18dp"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/steps_leaderboard"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:gravity="center"
            />

    </LinearLayout>

    <ListView
        android:id="@+id/leaderboardListView"
        android:layout_width="match_parent"
        android:layout_height="300dp">

    </ListView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/myPlaceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_place"
            android:textSize="18dp"
            android:textColor="@color/history_item"
            android:gravity="center" />
        <TextView
            android:id="@+id/myRecordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_record"
            android:textSize="18dp"
            android:textColor="@color/history_item"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>

</FrameLayout>
