<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kz.strixit.abuka.fourapp.ResultActivity"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:background="@color/colorBackgraoundMainMenu">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secret_word_was"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/letter1"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:text=""
            android:textSize="50dp"
            android:textColor="@color/purple"
            android:gravity="center"
            android:background="@drawable/letter1"
            android:layout_marginLeft="2dp"
            />
        <TextView
            android:id="@+id/letter2"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:text=""
            android:textSize="50dp"
            android:textColor="@color/green"
            android:gravity="center"
            android:background="@drawable/letter2"
            android:layout_marginLeft="2dp"
            />
        <TextView
            android:id="@+id/letter3"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:text=""
            android:textSize="50dp"
            android:textColor="@color/blue"
            android:gravity="center"
            android:background="@drawable/letter3"
            android:layout_marginLeft="2dp"
            />
        <TextView
            android:id="@+id/letter4"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:text=""
            android:textSize="50dp"
            android:textColor="@color/yellow"
            android:gravity="center"
            android:background="@drawable/letter4"
            android:layout_marginLeft="2dp"
            />
    </LinearLayout>

    <View android:background="#ffffff"
    android:layout_width = "match_parent"
    android:layout_height="5dp"
        android:layout_margin="30dp"/>


    <TextView
        android:id="@+id/status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/self_record"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/stepsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="20"
        android:textSize="60dp"
        android:gravity="center"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/stepText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/steps"
        android:textSize="20dp"
        android:gravity="center"
        android:textColor="@color/white"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="bottom"
        android:layout_marginBottom="30dp">

        <ImageButton
            android:id="@+id/shareButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:paddingRight="25dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/share_item"
            />

        <ImageButton
            android:id="@+id/newGameButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:paddingLeft="25dp"
            android:paddingRight="18dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/play_item"
            />

    </RelativeLayout>


</LinearLayout>
